# advent

./: .gitignore  .stylish-haskell.yaml  LICENSE  advent2020.cabal  fourmolu.yaml
2019/: advent2019.cabal  flake.nix
2019/app/: Main.hs
2019/src/: AocLib.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  IntCode.hs
2020/: .gitignore  advent2020.cabal  hie.yaml
2020/app/: Main.hs
2020/src/: Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
2021/: advent2021.cabal  flake.nix
2021/app/: Main.hs
2021/src/: Day01.hs  Day02.hs  Day05.hs  Day08.hs  Day11.hs  Day14.hs  Day16.hs  Day17.hs  Day18.hs  Day20.hs  Day21.hs  Day22.hs  Day24.hs
2022/: advent2022.cabal  flake.nix
2022/app/: Main.hs
2022/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
2023/: advent2023.cabal  flake.nix
2023/app/: Main.hs
2023/src/: AocLib.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
app/: Main.hs
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs
