cabal-version: 2.2

name:           advent2020
version:        0.1.0
homepage:       https://github.com/rkaippully/advent#readme
author:         Raghu Kaippully
copyright:      2020 Raghu Kaippully
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/rkaippully/advent

common advent-common
  default-language: Haskell2010
  default-extensions: LambdaCase
                    , OverloadedStrings
                    , OverloadedLists
                    , DerivingVia
                    , GeneralizedNewtypeDeriving
                    , TypeApplications
                    , FlexibleContexts
                    , QuasiQuotes
  
library
  import: advent-common
  exposed-modules: Day01
                 , Day02
                 , Day03
                 , Day04
                 , Day05
                 , Day06
                 , Day07
  hs-source-dirs: src
  build-depends: base
               , megaparsec
               , containers

executable advent2020
  import: advent-common
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: advent2020
               , base
