cabal-version: 2.4

name:           advent2022
version:        1.0.0
homepage:       https://github.com/rkaippully/advent#readme
author:         Raghu Kaippully
copyright:      2022 Raghu Kaippully
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/rkaippully/advent

common advent-common
  default-language: Haskell2010
  default-extensions: LambdaCase
                    , DerivingVia
                    , FlexibleContexts
                    , FlexibleInstances
                    , GeneralizedNewtypeDeriving
                    , InstanceSigs
                    , NamedFieldPuns
                    , OverloadedStrings
                    , QuasiQuotes
                    , TypeApplications
                    , TypeSynonymInstances
  ghc-options: -Wall
               -Wcompat
               -Widentities
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wmissing-fields
               -Wmissing-home-modules
               -Wmissing-deriving-strategies
               -Wpartial-fields
               -Wredundant-constraints
               -Wunused-packages
               -Wno-unticked-promoted-constructors
               -fshow-warning-groups

library
  import: advent-common
  exposed-modules: Day01
                 , Day02
                 , Day03
                 , Day04
                 , Day05
                 , Day06
                 , Day07
                 , Day08
                 , Day09
                 , Day10
                 , Day11
                 , Day12
                 , Day13
                 , Day14
                 , Day15
                 , Day16
                 , Day17
                 , Day18
                 , Day19
                 , Day20
                 , Day21
                 , Day22
                 , Day23
                 , Day24
                 , Day25
  hs-source-dirs: src
  build-depends: base
               , containers
               , megaparsec
               , mtl
               , split

executable advent2022
  import: advent-common
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -threaded
               -rtsopts
               -with-rtsopts=-N
               -O2
  build-depends: advent2022
               , base
